# EModLib

./: .gitignore  CMakeLists.txt  README.md
build_lin/: CMakeCache.txt  Makefile  cmake_install.cmake
build_lin/console_app/: Makefile  cmake_install.cmake
build_mac/: CMakeCache.txt  Makefile  cmake_install.cmake
build_mac/console_app/: Makefile  cmake_install.cmake
build_win/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  EModLib.sln  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  libEModLib.vcxproj  libEModLib.vcxproj.filters
build_win/Debug/: libEModLib.exp  libEModLib.ilk
build_win/console_app/: EModLibConsoleApp.vcxproj  EModLibConsoleApp.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters
build_win/libEModLib.dir/Debug/: objects.txt
build_win/libEModLib.dir/MinSizeRel/: objects.txt
build_win/libEModLib.dir/RelWithDebInfo/: objects.txt
build_win/libEModLib.dir/Release/: objects.txt
build_win/test/: CTestTestfile.cmake  EModLibTest.vcxproj  EModLibTest.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  googletest.vcxproj  googletest.vcxproj.filters
build_win/test/Debug/: EModLibTest.ilk
console_app/: CMakeLists.txt
console_app/include/: ConsoleApp.h
console_app/src/: ConsoleApp.cpp
gui_app/: CMakeLists.txt
gui_app/include/: mainwindow.h
gui_app/src/: main.cpp  mainwindow.cpp
include/: Affect.h  EmotionsModelLib.h  Empath.h  Gusher.h  IAffect.h  IPerson.h  Intellectual.h  Mood.h  PeopleFactory.h  Personality.h  Rock.h  stimulus.h
src/: Affect.cpp  EmotionsModelLib.cpp  Empath.cpp  Gusher.cpp  Intellectual.cpp  Mood.cpp  PeopleFactory.cpp  Personality.cpp  Rock.cpp  stimulus.cpp
test/: CMakeLists.txt  test.cpp
unity3d_plugin/: EModLibInitialize.cs  EModLibWrapper.cs  PlayerController.cs  PluginUnmanagedTest.cs
